src/frontend/assets/scss/_components/list.scss
//
// image
// --------------------------------------------------

.list-wrapper {
  position: relative;
  display: block;
  width: 100%;
  height: $input-height;
  margin-bottom: 20px;

  span {
    display: inline-block;
    width: 60%;
    color: $dark;
    font-family: $font-base;
    line-height: 18px;
    font-size: 14px;

    @include media-breakpoint-up($gutterBreak) {
      width: 25%;
    }
  }

  .list-inner {
    position: relative;
    display: inline-block;
    width: 100%;
    padding: 12px 15px 13px;
    background: $light;
    border-radius: $border-radius;

    @include media-breakpoint-up($gutterBreak) {
      width: calc(100% - 200px);
      max-width: 900px;
    }

    @include media-breakpoint-up(xl) {
      width: calc(100% - 267px);
    }
  }

  // remove button
  button.icon-remove {
    position: absolute;
    top: 0;
    right: 0;
    background: transparent !important;
    margin-top: 0;

    &:before,
    &:after {
      background: $primary !important;
    }
  }

  button.send {
    display: inline-block;
    margin-left: 30px - 4px;
  }
}

.doctor-list {
  margin-bottom: 50px;

  p {
    font-size: 14px;
    line-height: 18px;
  }
  .list-inner {
    width: 100%;
  }
}

.patient-list {
  margin-bottom: 40px;

  @include media-breakpoint-up($gutterBreak) {
    margin-bottom: 100px;
  }

  p {
    font-size: 14px;
    line-height: 18px;
  }

  label {
    display: inline-block;

    &.patient-count {
      text-align: right;
      float: right;
    }
  }
}

